syntax = "proto3";

package party;
option go_package = "github.com/jonashiltl/sessions-backend/packages/grpc/party";

import "google/api/annotations.proto";
import "common/common.proto";

service PartyService {
    rpc CreateParty (CreatePartyRequest) returns (PublicParty) {};
    rpc GetParty (GetPartyRequest) returns (PublicParty) {};
    rpc UpdateParty (UpdatePartyRequest) returns (PublicParty) {};
    rpc DeleteParty (DeletePartyRequest) returns (common.MessageResponse) {};
    rpc GetByUser (GetByUserRequest) returns (PagedParties) {};
    rpc GeoSearch (GeoSearchRequest) returns (PagedParties) {};
}

message CreatePartyRequest {
    string requester_id = 1;
    string title = 2;
    float lat = 3;
    float long = 4;
    bool is_public = 5;
}

message UpdatePartyRequest {
    string requester_id = 1;
    string party_id = 2;
    string title = 3;
    float lat = 4;
    float long = 5;
}

message DeletePartyRequest {
    string requester_id = 1;
    string party_id = 2;
}

message GeoSearchRequest {
    int64 precision = 1;
    float lat = 2;
    float long = 3;
    string next_page = 4;
}

message GetPartyRequest {
    string party_id = 1;
}

message GetByUserRequest {
    string user_id = 1;
    string next_page = 2;
}

message PagedParties {
    repeated PublicParty parties = 1;
    string next_page = 2;
}

message PublicParty {
    string id = 1;
    string user_id = 2;
    string title = 3;
    bool is_public = 4;
    float lat = 5;
    float long = 6;
    string created_at = 8;
}